# src/main/resources/openapi.yaml
@@ -6,13 +6,27 @@ servers:
 - url: http://localhost:8080
   description: Generated server url
 paths:
-  /api/country/{name}:
+  /api/country-table:
     get:
       tags:
-      - country-controller
-      operationId: getByName
+      - country-table-controller
+      operationId: getCountries
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CountryTableDto'
+  /api/country-detail/{iso3}:
+    get:
+      tags:
+      - country-detail-controller
+      operationId: getCountryByIso3
       parameters:
-      - name: name
+      - name: iso3
         in: path
         required: true
         schema:
@@ -23,24 +37,10 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/CountryResponse'
-  /api/countries:
-    get:
-      tags:
-      - country-controller
-      operationId: getCountries
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/CountryResponse'
+                $ref: '#/components/schemas/CountryDetailDto'
 components:
   schemas:
-    CountryResponse:
+    CountryTableDto:
       type: object
       properties:
         id:
@@ -48,38 +48,29 @@ components:
           format: int64
         name:
           type: string
-        nativeName:
-          type: string
         iso3:
-          type: string
-        iso2:
           type: string
         numericCode:
           type: integer
           format: int32
-        phoneCode:
-          type: string
         capitalName:
           type: string
         currency:
           type: string
-        currencyName:
-          type: string
-        currencySymbol:
-          type: string
-        topLevelDomain:
-          type: string
         region:
           type: string
-        regionId:
-          type: integer
-          format: int32
         subregion:
           type: string
-        subregionId:
-          type: integer
-          format: int32
-        nationality:
+        latitudeLongitude:
+          type: string
+        emoji:
+          type: string
+    CityEntity:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
           type: string
         latitude:
           type: integer
@@ -87,7 +78,39 @@ components:
         longitude:
           type: integer
           format: int32
-        emoji:
+    CountryDetailDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
           type: string
-        emojiu:
+        states:
+          type: array
+          items:
+            $ref: '#/components/schemas/StateEntity'
+        cities:
+          type: array
+          items:
+            $ref: '#/components/schemas/CityEntity'
+    StateEntity:
+      type: object
+      properties:
+        id:
           type: string
+        name:
+          type: string
+        type:
+          type: string
+        latitude:
+          type: integer
+          format: int32
+        longitude:
+          type: integer
+          format: int32
+        cities:
+          uniqueItems: true
+          type: array
+          items:
+            $ref: '#/components/schemas/CityEntity'
